--- a/Views/Shared/_Footer.cshtml
+++ b/Views/Shared/_Footer.cshtml
@@ -1,3 +1,3 @@
 <div class="container">
-    &copy; 2019 - MvcMovie - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+    &copy; 2019 - Movie App - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
 </div>
